@@ -27,7 +27,8 @@ lib boost_wave
       [ common-names ]        # magic for install and auto-link features
       <include>$(BOOST_ROOT) 
       <sysinclude>$(BOOST_ROOT)
-      <vc-7_1><*><rtti>off     # workaround for compiler bug
+      <vc-7_1><*><rtti>off    # workaround for compiler bug
+      <vc-7_1-stlport><*><rtti>off
       <no-warn>cpp_re.cpp
     : debug release           # build variants
     ;
